crates/rolldown/tests/rolldown/errors/require_tla/tla.js
export const value = await Promise.resolve('hello');
